# AIR-W24

./: .env-example  .gitignore  README.md  docker-compose.yml
Notebooks/: data-preparation-finetuning-and-inference.ipynb  finetuned-model-inference-ipynb.ipynb
backend/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  sqlite-vss.py
backend/alembic/: env.py
backend/endpoints/: __init__.py  bot_endpoint.py  topic_endpoint.py
backend/models/: __init__.py  chunk.py  document.py  topic.py
core_service/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
core_service/endpoints/: __init__.py
core_service/models/: __init__.py  document.py
dataset/: Merged_AlpenSicher_QA.jsonl  Merged_AlpenSicher_QA_extended.csv  merged_file_final.csv  merged_file_final_jsonl.jsonl
dataset/docs/: business-guardian.md  company-overview.md  health-elite.md  investment-shield.md  life-premium.md  property-shield.md  retirement-plus.md  signup-bonuses.md  travel-secure.md
evaluation/: AIR_LLM_Evaluation.xlsx  evaluation.ipynb  evaluation_rating_combined.csv  evaluation_tf_combined.csv  other_answers_questions.csv  true_false_questions.csv
frontend/: .prettierrc.json  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/models/: base.model.ts  document.model.ts  search-retrieval.model.ts  topic.model.ts
frontend/src/app/services/: tool.service.ts  topic.service.ts
frontend/src/environments/: environment.development.ts
model_files/: run_ollama.sh
(+23 files in other folders)
