[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Christian Bachl, Alex Walliser"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.0"
pydantic = "2.9.0"
uvicorn = "0.30.5"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
typing-extensions = "^4.12.2"
regex = "^2024.11.6"
pyjwt = "2.9.0"
requests = "^2.32.3"
cryptography = "43.0.0"
numpy = "^2.1.3"
sqlalchemy = "^2.0.36"
psycopg2 = "2.9.10"
aiofiles = "^24.1.0"
pymupdf = "^1.25.0"
glob2 = "^0.7"
alembic = "^1.14.0"
pdf2image = "^1.17.0"
mako = "1.3.6"
langchain-community = "^0.3.13"
faiss-cpu = "^1.9.0.post1"
langchain-openai = "^0.2.14"
pypdf = "^5.1.0"
langgraph = "^0.2.60"
langchain-ollama = "^0.2.2"
ollama = "^0.4.4"
langchain-mistralai = "^0.2.4"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
